--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 TEST_SUITE
+.VSCODE/
+.vscode/
+.vscode/*
+.vscode/settings.json
+.vscode/tasks.json`
+.vscode/launch.json
+.vscode/extensions.json
+.vscode/*.code-snippets
+
